# comrak

./: .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: CI.yml  deploy.yml  test.yml
.just/: ship.just
benchmark/: README.md  run_large_benchmark.sh
benchmark/hello_world_x1000/: comrak_bench.py  markdown2_bench.py  markdown_bench.py
src/: lib.rs  options.rs
tests/: link_url_rewriter_test.py
